<resources>
    <string name="app_name">Productivity</string>

    <string name="timer_running_state_header_1">Go on working</string>
    <string name="timer_running_state_header_2">Good job, do your best</string>
    <string name="timer_running_state_header_3">You\'re working now</string>
    <string name="timer_running_state_header_4">Just don\'t stop</string>

    <string name="timer_relaxing_state_header_1">Just relax</string>
    <string name="timer_relaxing_state_header_2">Get some rest</string>
    <string name="timer_relaxing_state_header_3">Take a break from work, a little more time</string>
    <string name="timer_relaxing_state_header_4">Work is not a wolf, it won\'t run into the forest</string>

    <string name="timer_paused_state_header">Timer is paused, just continue</string>
    <string name="timer_setup_state_header">Set up your plan</string>
    <string name="timer_completed_state_header">Step completed! Move on</string>
    <string name="timer_all_actions_completed_state_header">You worked great!</string>
    <string name="timer_all_actions_completed_state_action_ok">Move on</string>
    <string name="timer_dots">…</string>

    <string name="cancel_timer">Cancel program</string>
    <string name="timer_cancelled_state_header">Timer was cancelled</string>
    <string name="timer_cancelled_state_restore_message">Restore program</string>
    <string name="timer_cancelled_state_clear_message">OK</string>

    <string name="single_shot_timer_plan_setup_action">Single shot timer</string>
    <string name="single_shot_timer_plan_setup_header">Set up time you need</string>
    <string name="single_shot_timer_rest_select">Add some rest to you</string>

    <string name="timer_setup_confirm">Set up</string>
    <string name="timer_setup_activity_type">Activity</string>


    <string name="timer_notification_paused_header">Timer is on pause</string>
    <string name="timer_notification_completed_header">Completed</string>
    <string name="timer_notification_cancelled_header">Timer cancelled…</string>
    <string name="timer_notification_running_rest_header">Have a rest</string>
    <string name="timer_notification_running_default_activity_header">Do your best</string>
    <string name="timer_notification_remaining_content">Remaining %1$d minutes : %2$d seconds</string>
    <string name="timer_notification_great_completed_content">You worked hard</string>
    <string name="timer_notification_action_pause">Pause</string>
    <string name="timer_notification_action_resume">Resume</string>
    <string name="timer_notification_action_cancel">Cancel</string>

    <string name="preferences_header">Your preferences</string>
    <string name="preferences_preference_setup_duration_dialing">Setup duration via dial</string>
    <string name="preferences_preference_theme">App theme</string>
    <string name="preferences_preference_statistics_accounting_days">Statistics days length</string>
    <string name="preferences_preference_statistics_accounting_days_select">Select from %1$d to %2$d days</string>


    <string name="action_work_title">Work</string>
    <string name="action_rest_title">Rest</string>
    <string name="action_work_default_activity">Work-time</string>
    <string name="action_rest">Rest-time</string>
<!--    <string name="action_duration">%1$d minutes, %2$d seconds</string>-->
    <string name="action_duration_minutes">%1$d minutes</string>
    <string name="action_duration">%1$d:%2$d</string>

    <string name="statistics_header">Statistics</string>
    <string name="statistics_no_data_title">Your progress will be displayed here</string>
    <string name="statistics_worked_hours_totally_title">Totally worked %.1f hours</string>
    <string name="statistics_worked_minutes_totally_title">Totally worked %d minutes</string>
    <string name="statistics_rest_hours_totally_title">Totally %.1f hours on rest</string>
    <string name="statistics_rest_minutes_totally_title">Totally %d minutes on rest</string>

    <plurals name="statistics_for_days_header">
        <item quantity="one">Statistics for the last day</item>
        <item quantity="other">Statistics for last %d days</item>
    </plurals>

    <string name="statistics_events_vs_minutes">Events / Minutes</string>
    <string name="statistics_totally_worked_per_days_title">Per day data</string>
    <string name="statistics_totally_worked_per_days_legend">Work</string>
    <string name="statistics_totally_rest_per_days_legend">Rest</string>
    <string name="statistics_totally_per_day_data_xaxis_days_before">Days before</string>
    <string name="statistics_totally_per_day_data_yaxis_minutes">Minutes</string>
    <string name="statistics_totally_per_day_data_yaxis_events">Events</string>

    <string name="statistics_activity_names_pie_title">Most involved activities</string>
    <string name="statistics_activity_names_pie_data_yaxis">Minutes</string>

    <string name="forget_me_confirmation_action">Forget me</string>
    <string name="forget_me_confirmation_title">Are you sure?</string>
    <string name="forget_me_confirmation_content">Forgetting you will remove all related with you data such as statistics and all recorded actions</string>

    <string name="forget_me_confirmation_confirm">Confirm</string>
    <string name="forget_me_confirmation_decline">Cancel</string>


    <string name="single_shot_dismiss_confirmation_confirmation_title">Are you sure?</string>
    <string name="single_shot_dismiss_confirmation_confirmation_content">You\'re trying to dismiss non-empty addition action.\nIs it consciously?</string>

    <string name="single_shot_dismiss_confirmation_confirm">Dismiss</string>
    <string name="single_shot_dismiss_confirmation_decline">Return to setting up</string>

    <string name="action_templates_header">Action templates</string>
    <string name="action_template_name_field">Template name (unique)</string>
    <string name="action_template_name_set">Set template name and continue</string>


</resources>
