...
@Composable
fun DurationPicker(
    modifier: Modifier = Modifier,
    state: TimePickerState = rememberTimePickerState(),
    dial: Boolean = false
) {
    if (dial) TimePicker(state = state, colors = durationPickerColors, modifier = modifier.testTag("TimePicker"))
    else TimeInput(state = state, colors = durationPickerColors, modifier = modifier.testTag("TimeInput"))
}

val TimePickerState.duration: Duration
    get() = hour.hours + minute.minutes

val durationPickerColors: TimePickerColors
...
